[project]
name = "reliably"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awscli>=1.38.22",
    "chaostoolkit>=1.19.0",
    "chaostoolkit-addons>=0.11.0",
    "chaostoolkit-aws>=0.35.1",
    "chaostoolkit-dynatrace>=0.2.0",
    "chaostoolkit-google-cloud-platform>=0.37.0",
    "chaostoolkit-grafana>=0.2.0",
    "chaostoolkit-honeycomb>=0.6.2",
    "chaostoolkit-kubernetes>=0.39.0",
    "chaostoolkit-lib>=1.44.0",
    "chaostoolkit-lueur>=0.13.1",
    "chaostoolkit-opentracing>=0.17.0",
    "chaostoolkit-reliably>=0.82.0",
    "chaostoolkit-slack>=0.10.0",
    "chaostoolkit-wiremock>=0.1.2",
    "httpx[http2]>=0.28.1",
    "jsonpath2>=0.4.5",
    "opentelemetry-api>=1.31.1",
    "opentelemetry-exporter-gcp-trace>=1.9.0",
    "opentelemetry-exporter-otlp-proto-http>=1.31.1",
    "opentelemetry-instrumentation-httpx>=0.52b1",
    "opentelemetry-instrumentation-logging>=0.52b1",
    "opentelemetry-opentracing-shim>=0.52b1",
    "opentelemetry-propagator-b3>=1.31.1",
    "opentelemetry-propagator-gcp>=1.9.0",
    "opentelemetry-resourcedetector-gcp>=1.9.0a0",
    "opentelemetry-sdk>=1.31.1",
    "opentelemetry-semantic-conventions>=0.52b1",
    "reliably-cli>=0.28.1",
]
